--- a/wiki/Macro_WorkFeatures.html
+++ b/wiki/Macro_WorkFeatures.html
@@ -208,7 +208,7 @@ Macro WorkFeatures
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Cut Line</span>&nbsp;: Second, one cutting Line and click 'Select Cut Line' button,
 <ul><li>The name of the line selected are displayed</li></ul></li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Select Ref. Plane</span>&nbsp;: Last, a reference Plane and click 'Select Ref. Plane' button!
-<ul><li>The name of the plane selected are displayed</li></ul></li>
+<ul><li>The name of the selected plane are displayed</li></ul></li>
 <li><b>Angle</b>&nbsp;: Angle for cut (Default&nbsp;: 0.0)</li>
 <li><b>Thichness</b>&nbsp;: Thickness the cut (Default&nbsp;: 0.0)</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Reset</span>&nbsp;: Reset the values</li>
@@ -426,12 +426,12 @@ Thickness is the wide of the of the cutting Plane.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115052313
+Cached time: 20260115052404
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.145 seconds
-Real time usage: 0.168 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.143 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 25175/2097152 bytes
 Template argument size: 2942/2097152 bytes
@@ -442,18 +442,18 @@ Unstrip post&#8208;expand size: 21246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.284      1 -total
-  5.86%    2.886      1 Template:Macro
-  5.62%    2.772      1 Template:Userdocnavi
-  4.16%    2.051     54 Template:KEY
-  3.47%    1.710      1 Template:Navigation_menu_2
-  2.12%    1.043      1 Template:Caption
-  2.06%    1.014     11 Template:Clear
-  1.92%    0.946      1 Template:Button
-  1.45%    0.715      1 Template:MenuCommand
+100.00%   47.110      1 -total
+  6.03%    2.841      1 Template:Userdocnavi
+  4.40%    2.075      1 Template:Macro
+  4.32%    2.034     54 Template:KEY
+  3.82%    1.798      1 Template:Navigation_menu_2
+  3.55%    1.675     11 Template:Clear
+  2.05%    0.965      1 Template:Caption
+  1.85%    0.871      1 Template:MenuCommand
+  1.83%    0.863      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260115052318 and revision id 1738549. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260115052406 and revision id 1738550. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
