--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -344,8 +344,8 @@ Dicke ist die Breite der Schnittebene.
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 435px">
-			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_09.png&amp;filetimestamp=20150305141829&amp;.html" class="mw-file-description" title="du kannst auch Winkel und Dicke f&uuml;r deinen Schnitt angeben."><img alt="du kannst auch Winkel und Dicke f&uuml;r deinen Schnitt angeben." src="../File/Macro_Work_Features_Cutting_09.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
-			<div class="gallerytext"> du kannst auch Winkel und Dicke f&uuml;r deinen Schnitt angeben.</div>
+			<div class="thumb" style="width: 430px; height: 280px;"><span typeof="mw:File"><a href="../index.php?title=Macro_Work_Features_Cutting_09.png&amp;filetimestamp=20150305141829&amp;.html" class="mw-file-description" title="Der Winkel und die Dicke f&uuml;r den Schnitt k&ouml;nnen ebenfalls angegeben werden."><img alt="Der Winkel und die Dicke f&uuml;r den Schnitt k&ouml;nnen ebenfalls angegeben werden." src="../File/Macro_Work_Features_Cutting_09.png" decoding="async" width="351" height="250" class="mw-file-element" data-file-width="1135" data-file-height="810"></a></span></div>
+			<div class="gallerytext">Der Winkel und die Dicke f&uuml;r den Schnitt k&ouml;nnen ebenfalls angegeben werden.</div>
 		</li>
 </ul>
 </center>
@@ -443,34 +443,34 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115054437
+Cached time: 20260115054513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.139 seconds
-Real time usage: 0.177 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.171 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21823/5000000 bytes
+Unstrip post&#8208;expand size: 21873/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   77.164      1 -total
-  5.66%    4.369     54 Template:KEY
-  4.88%    3.766      1 Template:Userdocnavi/de
-  4.86%    3.748      1 Template:Macro/de
-  3.92%    3.023     11 Template:Clear
-  1.90%    1.465      1 Template:Caption
-  1.72%    1.326      1 Template:Button
-  1.64%    1.268      1 Template:MenuCommand
-  1.57%    1.214      1 Template:Navigation_menu_2
+100.00%   83.416      1 -total
+  4.58%    3.819      1 Template:Userdocnavi/de
+  4.16%    3.467      1 Template:Macro/de
+  4.11%    3.428     54 Template:KEY
+  2.92%    2.437      1 Template:Caption
+  2.32%    1.934     11 Template:Clear
+  1.72%    1.431      1 Template:Button
+  1.52%    1.266      1 Template:Navigation_menu_2
+  1.50%    1.255      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115054437 and revision id 1738568. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115054513 and revision id 1738570. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
