--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -409,7 +409,7 @@ Dicke ist die Breite der Schnittebene.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="../File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=WF_centerObjectsPlanes.png&amp;filetimestamp=20141225171322&amp;.html" class="mw-file-description"><img src="../File/WF_centerObjectsPlanes.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Quellen&nbsp;:</b>
-</p><p>Auf github&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
+</p><p>Auf GitHub&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
 </p><p>Datum 2019-05-01 (YYYY-MM-DD)
 </p><p>20/01/2019
 </p><p>08/03/2015&nbsp;: <a rel="nofollow" class="external text" href="http://github.com/Rentlau/WorkFeature.git">WF_2015_03_08</a>
@@ -442,12 +442,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115055203
+Cached time: 20260115055228
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.150 seconds
+CPU time usage: 0.143 seconds
+Real time usage: 0.181 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
@@ -458,18 +458,18 @@ Unstrip post&#8208;expand size: 21873/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.284      1 -total
-  4.58%    3.172      1 Template:Macro/de
-  3.82%    2.650      1 Template:Userdocnavi/de
-  3.47%    2.408     54 Template:KEY
-  2.34%    1.623     11 Template:Clear
-  1.80%    1.247      1 Template:Caption
-  1.79%    1.239      1 Template:Button
-  1.60%    1.112      1 Template:Navigation_menu_2
-  1.52%    1.053      1 Template:MenuCommand
+100.00%   89.510      1 -total
+  4.80%    4.294      1 Template:Userdocnavi/de
+  4.29%    3.838     54 Template:KEY
+  3.95%    3.531     11 Template:Clear
+  3.88%    3.471      1 Template:Macro/de
+  2.52%    2.257      1 Template:MenuCommand
+  2.39%    2.141      1 Template:Button
+  2.26%    2.024      1 Template:Navigation_menu_2
+  1.75%    1.565      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055202 and revision id 1738576. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055227 and revision id 1738578. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
