--- a/wiki/de/Macro_WorkFeatures.html
+++ b/wiki/de/Macro_WorkFeatures.html
@@ -414,7 +414,7 @@ Dicke ist die Breite der Schnittebene.
 </p><p>20/01/2019
 </p><p>08/03/2015&nbsp;: <a rel="nofollow" class="external text" href="http://github.com/Rentlau/WorkFeature.git">WF_2015_03_08</a>
 - Kreisschnitt hinzugef&uuml;gt
-- Sind parallel, Sind senkrecht, Sind koplanar hinzugef&uuml;gt
+- Sind parallel, sind senkrecht, sind koplanar hinzugef&uuml;gt
 </p><p>17/02/2015&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature.git">WF_2015_02_17</a>
 - Reiter Kreis und Ellipse hinzugef&uuml;gt
 - Reiter Schneiden hinzugef&uuml;gt
@@ -442,12 +442,12 @@ Dicke ist die Breite der Schnittebene.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115055228
+Cached time: 20260115055244
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.143 seconds
-Real time usage: 0.181 seconds
+CPU time usage: 0.168 seconds
+Real time usage: 0.218 seconds
 Preprocessor visited node count: 670/1000000
 Post&#8208;expand include size: 25865/2097152 bytes
 Template argument size: 3273/2097152 bytes
@@ -458,18 +458,18 @@ Unstrip post&#8208;expand size: 21873/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   89.510      1 -total
-  4.80%    4.294      1 Template:Userdocnavi/de
-  4.29%    3.838     54 Template:KEY
-  3.95%    3.531     11 Template:Clear
-  3.88%    3.471      1 Template:Macro/de
-  2.52%    2.257      1 Template:MenuCommand
-  2.39%    2.141      1 Template:Button
-  2.26%    2.024      1 Template:Navigation_menu_2
-  1.75%    1.565      1 Template:Caption
+100.00%  102.283      1 -total
+  5.79%    5.927      1 Template:Userdocnavi/de
+  4.70%    4.810      1 Template:Macro/de
+  4.28%    4.380     54 Template:KEY
+  3.65%    3.730      1 Template:Caption
+  3.01%    3.080      1 Template:Button
+  2.89%    2.958      1 Template:MenuCommand
+  2.74%    2.803     11 Template:Clear
+  2.58%    2.637      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055227 and revision id 1738578. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:164568-0!canonical and timestamp 20260115055243 and revision id 1738580. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
