--- a/wiki/Macro_WorkFeatures.html
+++ b/wiki/Macro_WorkFeatures.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro WorkFeatures</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+WorkFeatures&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--high" title="Makro ArbeitsFunktionen (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro ArbeitsFunktionen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Macro_WorkFeatures.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro WorkFeatures (100% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -393,7 +393,7 @@ Thickness is the wide of the of the cutting Plane.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=WF_wf.png&amp;filetimestamp=20150308174307&amp;.html" class="mw-file-description"><img src="File/WF_wf.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> 
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=WF_centerObjectsPlanes.png&amp;filetimestamp=20141225171322&amp;.html" class="mw-file-description"><img src="File/WF_centerObjectsPlanes.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p><p><b>Sources&nbsp;:</b>
-</p><p>On github&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
+</p><p>On GitHub&nbsp;: <a rel="nofollow" class="external text" href="https://github.com/Rentlau/WorkFeature-WB.git">/github.com/Rentlau/WorkFeature-WB.git</a>
 </p><p>Date 2019-05-01 (YYYY-MM-DD)
 </p><p>20/01/2019
 </p><p>08/03/2015&nbsp;: <a rel="nofollow" class="external text" href="http://github.com/Rentlau/WorkFeature.git">WF_2015_03_08</a>
@@ -426,34 +426,34 @@ Thickness is the wide of the of the cutting Plane.
 
 <!-- 
 NewPP limit report
-Cached time: 20260115052404
+Cached time: 20260115055342
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.143 seconds
+CPU time usage: 0.126 seconds
+Real time usage: 0.172 seconds
 Preprocessor visited node count: 757/1000000
 Post&#8208;expand include size: 25175/2097152 bytes
 Template argument size: 2942/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 21246/5000000 bytes
+Unstrip post&#8208;expand size: 21251/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.110      1 -total
-  6.03%    2.841      1 Template:Userdocnavi
-  4.40%    2.075      1 Template:Macro
-  4.32%    2.034     54 Template:KEY
-  3.82%    1.798      1 Template:Navigation_menu_2
-  3.55%    1.675     11 Template:Clear
-  2.05%    0.965      1 Template:Caption
-  1.85%    0.871      1 Template:MenuCommand
-  1.83%    0.863      1 Template:Button
+100.00%   60.609      1 -total
+  5.81%    3.519      1 Template:Macro
+  4.49%    2.721      1 Template:Userdocnavi
+  3.83%    2.319     11 Template:Clear
+  3.75%    2.272     54 Template:KEY
+  2.86%    1.735      1 Template:Navigation_menu_2
+  2.34%    1.420      1 Template:Caption
+  1.64%    0.995      1 Template:Button
+  1.20%    0.725      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260115052406 and revision id 1738550. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:53456-0!canonical and timestamp 20260115055342 and revision id 1738581. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
