--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -79,10 +79,10 @@
 </p>
 <ol><li>Spus&#357;te <span typeof="mw:File"><a href="../index.php?title=Std_DlgParameter.svg&amp;filetimestamp=20240528121001&amp;.html" class="mw-file-description"><img src="../File/Std_DlgParameter.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_DlgParameter/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std DlgParameter/cs (page does not exist)">Editor parametr&#367;</a>.</li>
 <li>Na lev&eacute;m panelu p&#345;ejd&#283;te na <b>BaseApp &rarr; P&#345;edvolby &rarr; NaviCube</b>.</li>
-<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na panel vpravo a z kontextov&eacute;ho menu vyberte <a href="../index.php?title=Template;MenuCommand/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Template:MenuCommand/cs (page does not exist)">Template:MenuCommand/cs</a>.</li>
+<li>Klikn&#283;te prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na panel vpravo a z kontextov&eacute;ho menu vyberte <b>Nov&yacute; neozna&#269;en&yacute; prvek</b>.</li>
 <li>Zadejte n&aacute;zev jedn&eacute; z t&#283;chto barev:
 <ul><li><b>BaseColor</b>: the base color of all elements, the default is <code>3806916544</code> (hex: <code>e2e8efc0</code>). This color can be also set in the <a href="../Preferences_Editor.html#Navigation" title="Preferences Editor">Preferences Editor</a>. <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span></li>
-<li><b>EmphaseColor</b>: barva text&#367; a &#345;&aacute;dk&#367;, v&yacute;choz&iacute; nastaven&iacute; z&aacute;vis&iacute; na <a href="../index.php?title=Template;MenuCommand/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Template:MenuCommand/cs (page does not exist)">Template:MenuCommand/cs</a>. Je bu&#271; &#269;ern&aacute;: <code>255</code> (hex: <code>000000ff</code>) nebo b&iacute;l&aacute;: <code>4294967295</code> (hex: <code>ffffffff</code>). <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span></li>
+<li><b>EmphaseColor</b>: barva text&#367; a &#345;&aacute;dk&#367;, v&yacute;choz&iacute; nastaven&iacute; z&aacute;vis&iacute; na <b>BaseColor</b>. Je bu&#271; &#269;ern&aacute;: <code>255</code> (hex: <code>000000ff</code>) nebo b&iacute;l&aacute;: <code>4294967295</code> (hex: <code>ffffffff</code>). <span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span></li>
 <li><b>HiliteColor</b>: barva pou&#382;it&aacute; pro zv&yacute;razn&#283;n&iacute; ploch a tla&#269;&iacute;tek, v&yacute;choz&iacute; nastaven&iacute; je <code>2867003391</code> (hex: <code>aae2ffff</code>).</li></ul></li>
 <li>Hodnota barvy mus&iacute; b&yacute;t zad&aacute;na jako 32bitov&eacute; cel&eacute; &#269;&iacute;slo bez znam&eacute;nka. P&#345;evedeno do hexadecim&aacute;ln&iacute;ho form&aacute;tu m&aacute; toto cel&eacute; &#269;&iacute;slo tvar <code>RRGGBBAA</code>. Kde <code>AA</code> znamen&aacute; alfa kan&aacute;l (m&#283;&#345;&iacute;tko pr&#367;hlednosti) a dal&scaron;&iacute; t&#345;i dvojice &#269;&iacute;slic znamenaj&iacute; &#269;ervenou, zelenou a modrou barvu. Pro p&#345;evod hexadecim&aacute;ln&iacute; hodnoty na cel&eacute; &#269;&iacute;slo bez znam&eacute;nka m&#367;&#382;ete pou&#382;&iacute;t <a href="../index.php?title=Python_Console/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Python Console/cs (page does not exist)">Konzola Pythonu</a>, zadejte nap&#345;&iacute;klad <code>int("323232ff", 16)</code>.</li>
 <li>Voliteln&#283; nastavte dal&scaron;&iacute; parametry.</li>
@@ -246,11 +246,11 @@
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
-<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
+<li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../cs/Compile_on_Docker.html" title="Compile on Docker/cs">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
 <li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../cs/Testing.html" title="Testing/cs">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -258,15 +258,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111122722
+Cached time: 20260115092402
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 399/1000000
-Post&#8208;expand include size: 9453/2097152 bytes
-Template argument size: 3197/2097152 bytes
+CPU time usage: 0.097 seconds
+Real time usage: 0.200 seconds
+Preprocessor visited node count: 405/1000000
+Post&#8208;expand include size: 9442/2097152 bytes
+Template argument size: 3230/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.956      1 -total
- 34.04%   10.197      1 Template:Userdocnavi/cs
- 25.77%    7.719     14 Template:Value
- 17.98%    5.386      1 Template:Navigation_menu_2
- 17.90%    5.361     15 Template:Incode
-  6.80%    2.036      2 Template:Docnav
-  6.00%    1.799     10 Template:MenuCommand
-  5.81%    1.742      7 Template:Version
-  5.04%    1.510      1 Template:Button
-  4.87%    1.460      1 Template:TOCright
+100.00%   57.519      1 -total
+ 49.14%   28.268     14 Template:Value
+ 43.67%   25.120     15 Template:Incode
+ 22.51%   12.949      1 Template:Userdocnavi/cs
+  6.84%    3.935      1 Template:Button
+  5.98%    3.437      1 Template:Navigation_menu_2
+  4.92%    2.830      2 Template:Docnav
+  4.37%    2.511      7 Template:Version
+  2.89%    1.663      1 Template:TOCright
+  2.57%    1.478     12 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260111122722 and revision id 1733563. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260115092401 and revision id 1738583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
