--- a/wiki/cs/Navigation_Cube.html
+++ b/wiki/cs/Navigation_Cube.html
@@ -62,7 +62,7 @@
 <li>{{MenuCommand|<span typeof="mw:File"><a href="../index.php?title=Std_ViewFitAll.svg&amp;filetimestamp=20240704204734&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_ViewFitAll/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitAll/cs (page does not exist)">Zobrazit v&scaron;e</a>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny viditeln&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru.</li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_ViewFitSelection.svg&amp;filetimestamp=20240704204801&amp;.html" class="mw-file-description"><img src="../File/Std_ViewFitSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_ViewFitSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std ViewFitSelection/cs (page does not exist)">Zobrazit v&yacute;b&#283;r</a></b>: p&#345;ibl&iacute;&#382;&iacute; a posune kameru tak, aby se v&scaron;echny vybran&eacute; objekty ve&scaron;ly do z&aacute;b&#283;ru. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
 <li><b><span typeof="mw:File"><a href="../index.php?title=Std_AlignToSelection.svg&amp;filetimestamp=20240705143347&amp;.html" class="mw-file-description"><img src="../File/Std_AlignToSelection.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Std_AlignToSelection/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AlignToSelection/cs (page does not exist)">Zarovnat podle v&yacute;b&#283;ru</a></b>: nasm&#283;ruje kameru v zobrazen&iacute; v opa&#269;n&eacute;m sm&#283;ru ne&#382; je norm&aacute;la rovinn&eacute; plochy nebo v opa&#269;n&eacute;m sm&#283;ru ne&#382; je p&#345;&iacute;m&aacute; hrana. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li>
-<li><a href="../index.php?title=Template;MenuCommand/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Template:MenuCommand/cs (page does not exist)">Template:MenuCommand/cs</a>: pokud je za&scaron;krtnuto toto pol&iacute;&#269;ko (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>), lze celou naviga&#269;n&iacute; kostku p&#345;esunout tak, &#382;e podr&#382;&iacute;te lev&eacute; tla&#269;&iacute;tko my&scaron;i kdekoli na hlavn&iacute; kostce a p&#345;et&aacute;hnete ji. To slou&#382;&iacute; k do&#269;asn&eacute;mu p&#345;esunut&iacute; kostky z cesty. Pomoc&iacute; <a href="#Advanced_parameters/cs">pokro&#269;il&yacute;ch parametr&#367;</a> OffsetX a OffsetY lze kostku trvale p&#345;em&iacute;stit, viz  n&iacute;&#382;e.</li></ul>
+<li><b>Pohybliv&aacute; naviga&#269;n&iacute; kostka</b>: pokud je za&scaron;krtnuto toto pol&iacute;&#269;ko (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>), lze celou naviga&#269;n&iacute; kostku p&#345;esunout tak, &#382;e podr&#382;&iacute;te lev&eacute; tla&#269;&iacute;tko my&scaron;i kdekoli na hlavn&iacute; kostce a p&#345;et&aacute;hnete ji. To slou&#382;&iacute; k do&#269;asn&eacute;mu p&#345;esunut&iacute; kostky z cesty. Pomoc&iacute; <a href="#Advanced_parameters/cs">pokro&#269;il&yacute;ch parametr&#367;</a> OffsetX a OffsetY lze kostku trvale p&#345;em&iacute;stit, viz  n&iacute;&#382;e.</li></ul>
 </div>
 <p><span id="Customization"></span>
 </p>
@@ -258,15 +258,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115092402
+Cached time: 20260115092421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.200 seconds
-Preprocessor visited node count: 405/1000000
-Post&#8208;expand include size: 9442/2097152 bytes
-Template argument size: 3230/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.118 seconds
+Preprocessor visited node count: 408/1000000
+Post&#8208;expand include size: 9449/2097152 bytes
+Template argument size: 3259/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -274,19 +274,19 @@ Unstrip post&#8208;expand size: 3003/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.519      1 -total
- 49.14%   28.268     14 Template:Value
- 43.67%   25.120     15 Template:Incode
- 22.51%   12.949      1 Template:Userdocnavi/cs
-  6.84%    3.935      1 Template:Button
-  5.98%    3.437      1 Template:Navigation_menu_2
-  4.92%    2.830      2 Template:Docnav
-  4.37%    2.511      7 Template:Version
-  2.89%    1.663      1 Template:TOCright
-  2.57%    1.478     12 Template:MenuCommand
+100.00%   17.734      1 -total
+ 26.36%    4.674      1 Template:Userdocnavi/cs
+ 20.76%    3.681     14 Template:Value
+ 13.53%    2.400      1 Template:Navigation_menu_2
+ 11.97%    2.123      2 Template:Docnav
+  9.72%    1.724     15 Template:Incode
+  8.57%    1.520     13 Template:MenuCommand
+  8.35%    1.481      1 Template:TOCright
+  7.56%    1.340      7 Template:Version
+  5.85%    1.037      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260115092401 and revision id 1738583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410187-0!canonical and timestamp 20260115092421 and revision id 1738585. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
